# skribbl-clone

./: .gitignore  .prettierrc  README.md  bun.lockb  env.sh  example.env  package.json  pyproject.toml  tsconfig.json  vite.config.ts
src/backend/: application.py  environment.py
src/frontend/: application.tsx  environment.tsx  index.html  main.tsx  preflight.css
